<resources>
    <string name="app_name">workoutLog</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="email_required">Password is required</string>
    <string name="password_required">Email is required</string>
    <string name="enter_lastname">Enter Lastname</string>
    <string name="enter_firstname">Enter firstname</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">Log In</string>
    <string name="Plan">Plan</string>
    <string name="Track">Track</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>